# src/modules/mentoring/useCases/DeleteMentoring/DeleteMentoringController.ts
@@ -5,12 +5,12 @@ import { DeleteMentoringUseCase } from './DeleteMentoringUseCase';
 class DeleteMentoringController {
     async handle(request: Request, response: Response):Promise<Response>{
         const { mentoring_id } = request.params;
-        const { id: mentor_id } = request.user;
+        const { is_mentor } = request.user;
         const { refused_info } = request.body;
 
         const deleteMentoringUseCase = container.resolve(DeleteMentoringUseCase)
 
-        await deleteMentoringUseCase.execute({mentor_id, mentoring_id, refused_info})
+        await deleteMentoringUseCase.execute({ mentoring_id, refused_info, is_mentor})
         
         return response.status(204).json({ message: "Mentoring refused"})
     }
